--- a/Nasa/index.html
+++ b/Nasa/index.html
@@ -16,7 +16,7 @@
 
     <script>
         // Make a GET request to the server to obtain the astronomical image of the day.
-        fetch('http://localhost:3002/apod')
+        fetch('/apod')
             .then(response => response.json())
             .then(data => {
                 // Update HTML elements with the received data
